2011-07-19	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1840/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of key
	set and get.
	* psxtmkey02/.cvsignore, psxtmkey02/Makefile.am, psxtmkey02/init.c,
	psxtmkey02/psxtmkey02.doc: New files.

2011-07-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* configure.ac: Remove psxtmmutex04 until PR 1836 is processed.

2011-07-15	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1835/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	mutex set and get priority ceiling.
	* psxtmmutex07/.cvsignore, psxtmmutex07/Makefile.am,
	psxtmmutex07/init.c, psxtmmutex07/psxtmmutex07.doc: New files.

2011-07-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmtests_plan.csv: Update to reflect next activities.

2011-07-13	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1831/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	mutex init and destroy.
	* psxtmmutex01/.cvsignore, psxtmmutex01/Makefile.am,
	psxtmmutex01/init.c, psxtmmutex01/psxtmmutex01.doc: New files.

2011-07-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmnanosleep01/init.c, psxtmsleep01/init.c: Do not divide by
	OPERATION_COUNT on single shot times.

2011-07-12	Ricardo Aguirre <el.mastin@ymail.com>

	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add psxtmmutex03.
	* psxtmmutex03/.cvsignore, psxtmmutex03/Makefile.am,
	psxtmmutex03/init.c, psxtmmutex03/psxtmmutex03.doc: New files.

2011-06-29	Ricardo Aguirre <el.mastin@ymail.com>

	* psxtmtests/Makefile.am, psxtmtests/configure.ac,
	psxtmtests/psxtmtests_plan.csv: Added nanosleep tests.
	* psxtmtests/psxtmnanosleep01/Makefile.am,
	psxtmtests/psxtmnanosleep01/init.c,
	psxtmtests/psxtmnanosleep01/psxtmnanosleep01.doc,
	psxtmtests/psxtmnanosleep02/Makefile.am,
	psxtmtests/psxtmnanosleep02/init.c,
	psxtmtests/psxtmnanosleep02/psxtmnanosleep02.doc,
	psxtmnanosleep01/.cvsignore, psxtmnanosleep02/.cvsignore: New files.
