@@ -79,6 +79,7 @@ AC_SUBST(OPERATION_COUNT)
 
 # Explicitly list all Makefiles here
 AC_CONFIG_FILES([Makefile
+psxtmkey01/Makefile
 psxtmkey02/Makefile
 psxtmmutex01/Makefile
 psxtmmutex02/Makefile
